--- a/force-app/main/default/classes/ParticipantService.cls
+++ b/force-app/main/default/classes/ParticipantService.cls
@@ -112,11 +112,11 @@ public without sharing class ParticipantService {
 
     @TestVisible
     private Boolean showVisits() {
-        if (participantState.ctp != null && participantState.ctp.Visit_Plan__c != null) {
-            List<Visit__c> visitsList = (List<Visit__c>) DatabaseService.query(
-                    'SELECT Id FROM Visit__c WHERE Visit_Plan__c = \''
-                            + participantState.ctp.Visit_Plan__c + '\'');
-            return visitsList.size() > 0;
+        if (participantState.pe != null) {
+            List<Patient_Visit__c> patientVisit = [
+                    SELECT Id FROM Patient_Visit__c WHERE Participant_Enrollment__c = :participantState.pe.Id
+            ];
+            return !patientVisit.isEmpty();
         }
         return false;
     }
