--- a/force-app/main/default/classes/ParticipantVisitsRemote.cls
+++ b/force-app/main/default/classes/ParticipantVisitsRemote.cls
@@ -28,16 +28,18 @@ public with sharing class ParticipantVisitsRemote {
     public static String getVisitsLegend(String iconNames) {
         try {
             List<Legend> legends = new List<Legend>();
-            ParticipantService.ParticipantState state = ((ParticipantService) ClassFactory.newInstance(ParticipantService.class)).getState();
-            if(String.isNotBlank(iconNames) && state.ctp != null && state.ctp.Visit_Plan__c != null) {
+            ParticipantService.ParticipantState state =
+                    ((ParticipantService) ClassFactory.newInstance(ParticipantService.class)).getState();
+            if(String.isNotBlank(iconNames) && state.pe != null && state.pe.Visit_Plan__c != null) {
                 String query = 'SELECT Id, ' +
                         'Name, ' +
                         'Label__c, ' +
                         'Description__c ' +
                         'FROM Icon_Details__c ' +
                         'WHERE Name IN (' + CollectionUtil.joinByComa(CollectionUtil.wrapInApostrophes(iconNames.split(';'))) + ') ' +
-                            'AND Visit_Plan__c = \'' + state.ctp.Visit_Plan__c + '\'';
-                List<Icon_Details__c> iconsDetails = ((DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class)).query(query, true);
+                            'AND Visit_Plan__c = \'' + state.pe.Visit_Plan__c + '\'';
+                List<Icon_Details__c> iconsDetails =
+                        ((DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class)).query(query, true);
                 TranslateHelper.translate(iconsDetails);
 
                 for (Icon_Details__c iconDetails : iconsDetails) {
