--- a/force-app/main/default/classes/PatientVisitService.cls
+++ b/force-app/main/default/classes/PatientVisitService.cls
@@ -11,17 +11,11 @@ public inherited sharing class PatientVisitService {
     public List<VisitWrapper> getVisitWrappers(String visitMode, Integer limitNumber) {
         return this.getVisitWrappers(this.getVisits(visitMode, limitNumber));
     }
-    
-    public List<Patient_Visit__c> getVisits(String filter) {
-         return null;
-    }
 
     private List<Patient_Visit__c> getVisits(String visitMode, Integer limitNumber) {
 
         ParticipantService.ParticipantState pState = ((ParticipantService) ClassFactory.newInstance(ParticipantService.class)).getState();
-        if (pState == null || pState.ctp == null || !pState.showVisits || pState.pe == null) {
-            return null;
-        }
+        if (pState == null || pState.pe == null || !pState.showVisits) return null;
 
         String visitsQuery = 'SELECT ' +
                 'Name, ' +
@@ -33,7 +27,6 @@ public inherited sharing class PatientVisitService {
                 'Is_Adhoc__c ' +
                 'FROM Patient_Visit__c ' +
                 'WHERE Participant_Enrollment__c = \'' + pState.pe.Id + '\'' +
-                (VISIT_MODE_CURRENT == visitMode ? ' AND Visit__r.Visit_Plan__c = \'' + pState.ctp.Visit_Plan__c + '\'' : '') +
                 ' AND Status__c ' + (VISIT_MODE_CURRENT == visitMode ? '=' : '!=') + '\'' + VISIT_STATUS_PENDING + '\'' +
                 ' ORDER BY Visit_Number__c ' + (VISIT_MODE_PAST == visitMode ? ' DESC ' : 'ASC') + ' NULLS LAST' +
                 (limitNumber == null ? '' : ' LIMIT ' + limitNumber);
