--- a/force-app/main/default/classes/ReferHealthcareProviderRemote.cls
+++ b/force-app/main/default/classes/ReferHealthcareProviderRemote.cls
@@ -111,10 +111,7 @@ global without sharing class ReferHealthcareProviderRemote {
                     RP_Invited_By_PI__c = true,
                     //MailingCountry = studySite.Site__r.BillingCountry));
                     MailingCountry = piContact.MailingCountry,
-                    MailingCity = piContact.MailingCity,
-                    MailingPostalCode = piContact.MailingPostalCode,
-                    MailingState = piContact.MailingState,
-                    MailingStreet = piContact.MailingStreet));
+                    MailingState = piContact.MailingState));
             insert cntList;
         } else {
             cntList[0].RP_Invited_By_PI__c = true;
