--- a/force-app/main/default/classes/ParticipantService.cls
+++ b/force-app/main/default/classes/ParticipantService.cls
@@ -96,7 +96,8 @@ public without sharing class ParticipantService {
                         Mailing_Zip_Postal_Code__c,
                         Contact__c,
                         Conditions__c,
-                        Contact__r.Visit_Results_Opt_In__c
+                        Contact__r.Visit_Results_Opt_In__c,
+                        Marketing_Flag__c
                 FROM Participant__c
                 WHERE Contact__c = :sourceId OR Id = :sourceId
         ];
