--- a/force-app/main/default/classes/TrialItemRemote.cls
+++ b/force-app/main/default/classes/TrialItemRemote.cls
@@ -9,7 +9,7 @@ public with sharing class TrialItemRemote {
             TrialSearchHelper helper = (TrialSearchHelper) ClassFactory.newInstance(TrialSearchHelper.class);
             helper.createCaseAndSendNotification(participant, ctp);
             if (participant.Id != null && !isDelegate) {
-                update participant;
+                ((DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class)).updateRecord(participant, true);
             }
         } catch (Exception e) {
             AuraHelper.throwException(e);
