--- a/force-app/main/tests/classes/Test_ClinicalTrialProfileTriggerHandler.cls
+++ b/force-app/main/tests/classes/Test_ClinicalTrialProfileTriggerHandler.cls
@@ -33,7 +33,7 @@ public with sharing class Test_ClinicalTrialProfileTriggerHandler {
                         'Study_Code_Name__c' => 'CTP 1',
                         'NCT_Number__c' => 'NCT00000001',
                         'Therapeutic_Area__c' => tA.Id,
-                        'Synch_with_TMDH__c' => 'true'
+                        'Synch_with_TMDH__c' => true
                 }));
         clinicalTrialProfiles.add((Clinical_Trial_Profile__c) TestDataFactory.getSObject(Clinical_Trial_Profile__c.getSObjectType(),
                 new Map<String, Object>{
@@ -42,7 +42,7 @@ public with sharing class Test_ClinicalTrialProfileTriggerHandler {
                         'Study_Code_Name__c' => 'CTP 2',
                         'NCT_Number__c' => 'NCT00000002',
                         'Therapeutic_Area__c' => tA.Id,
-                        'Synch_with_TMDH__c' => 'true'
+                        'Synch_with_TMDH__c' => true
                 }));
         insert clinicalTrialProfiles;
 
