Fixes for deployment

--- a/force-app/main/default/classes/EmailActionBtnController.cls
+++ b/force-app/main/default/classes/EmailActionBtnController.cls
@@ -5,6 +5,7 @@
 global without sharing class EmailActionBtnController {
     
     global String buttonURLString {get; set;}
+    global String caseIdString {get; set;}
     
     public String getResultURL(){
         String result = buttonURLString;
