REF-557 To allow PI to invite RP from Manage RPs page w/o study
REF-557 To allow PI to invite RP from Manage RPs page w/o study

--- a/force-app/main/default/classes/Action_InviteRPRemote.cls
+++ b/force-app/main/default/classes/Action_InviteRPRemote.cls
@@ -66,7 +66,7 @@ public without sharing class Action_InviteRPRemote {
             if (invitationQueues.size() > 0) {
                 l.OwnerId = invitationQueues[0].Id;
             }
-            if (!isConvertNeed) {
+            if (!isConvertNeed || String.isEmpty(studySiteId)) {
                 l.setOptions(dmlOpts);
                 insert l;
             } else {
